k8s/archive-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archive-deployment
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: archive
  template:
    metadata:
      labels:
        app: archive
    spec:
      containers:
        - image: summer15/archive-service:1.0.0
          name: archive-container
          imagePullPolicy: IfNotPresent
