k8s/archive-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: archive-service
spec:
  type: ClusterIP
  selector:
    app: archive
  ports:
    - port: 8091
      targetPort: 8091
