k8s/archive-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: archive-service
spec:
  type: NodePort
  selector:
    app: archive
  ports:
    - port: 8091
      targetPort: 8091
      nodePort: 30601
