k8s/task-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: ClusterIP
  selector:
    app: task
  ports:
    - port: 8092
      targetPort: 8092
