k8s/task-service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: NodePort
  selector:
    app: task
  ports:
    - port: 8092
      targetPort: 8092
      nodePort: 30602
