k8s/user-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 8093
      targetPort: 8093
