k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - port: 8093
      targetPort: 8093
      nodePort: 30603
